# docuchat

./: .gitignore  .yamllint.yml  ALL_DONE.md  ALL_FIXES_COMPLETE.md  ALL_LINTING_FIXED.md  BACKEND_COMPLETE_FINAL.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_READY.md  BACKEND_STATUS.md  BOOTSTRAP_COMPLETE.md  COMPLETE_LINTING_AND_FORMATTING.md  CONTRIBUTING.md  DEVOPS_AGENT_SUMMARY.md  DEVOPS_COMPLETE_STATUS.txt  DEVOPS_IMPLEMENTATION_COMPLETE.md  FINAL_LINTING_STATUS.md  FINAL_STATUS.txt  FINAL_SUCCESS.md  FIXES_SUMMARY.md  FRONTEND_COMPLETE.md  FRONTEND_FILES_SUMMARY.md  GETTING_STARTED.md  LICENSE  LINTING_FIXES_COMPLETE.md  MARKDOWN_FIXES.txt  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  VERIFICATION.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  (+5 more)
backend/app/core/: config.py  security.py
backend/app/db/: init.py  session.py
backend/app/middleware/: __init__.py  metrics.py
backend/app/models/: __init__.py  chat.py  chunk.py  document.py  quota.py  tenant.py  user.py
backend/app/schemas/: auth.py  chat.py  files.py  usage.py
backend/app/services/: chunker.py  embedder.py  pdf_ingest.py  rag.py  ratelimit.py  retriever.py  tokens_meter.py
backend/app/ws/: __init__.py  chat.py
backend/examples/: api_usage.py
backend/scripts/: create_tenant.py  setup.sh
backend/tests/: __init__.py  conftest.py  test_auth.py  test_files.py  test_health.py  test_main.py  test_usage.py
(+81 files in other folders)
